# gacha-game

./: .gitignore
achievement-service/: README.md
api-service/: README.md  package.json
api-service/scripts/: build-protos.sh
api-service/src/: index.ts
api-service/src/fighter-service-client/: index.ts
api-service/src/proto/: fighter_grpc_pb.d.ts  fighter_grpc_pb.js  fighter_pb.d.ts  fighter_pb.js
battle-service/: README.md  go.mod  go.sum  main.go
battle-service/docs/: docs.go  swagger.json  swagger.yaml
battle-service/internal/app/: enums.go  models.go
battle-service/internal/http/: routes.go  swagger.go
battle-service/internal/mechanics/: element.go  element_test.go
blog/: README.md  package.json
blog/components/: Layout.tsx
blog/pages/: _app.tsx  index.tsx
blog/styles/: font-face.ts
fighter-service/: .env  Cargo.toml  README.md  build.rs  greeter.rs
fighter-service/migrations/2020-12-30-201553_create_fighters/: down.sql  up.sql
fighter-service/src/: fighter-server.rs  models.rs  schema.rs  server.rs
frontend/react-client/: .eslintcache  package.json
monitoring/: README.md
monolith/: Makefile  go.mod  go.sum  main.go
monolith/docs/: docs.go  swagger.json  swagger.yaml
protos/: Makefile  README.md  fighter.proto  greeter.proto
protos/src/: greeter.proto
store-service/: .gitignore  README.md  mix.exs
store-service/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
store-service/lib/: storeservice.ex  storeservice_web.ex
store-service/test/: test_helper.exs
web-app/: README.md
(+41 files in other folders)
