[package]
name = "fighter-service"
version = "0.1.0"
authors = ["Mike Campbell <mike.campbell@getweave.com>"]
edition = "2018"

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.3"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"